# FADNet

./: '  .dataset.py.swo  .detect.sh.swo  .detecter.py.swn  .detecter.py.swo  .dispnet.py.swo  .dispnet.py.swp  .dltrainer.py.swo  .gitignore  .main.py.swp  .multiscaleloss.py.swn  .multiscaleloss.py.swo  .nfs00000004812c382100000008  .nfs00000004812c382800000009  1  3d-fusion.sh  3d-vision.sh  CC_FlyingThings3D_release_TEST.list  GPUHOME_CC_FlyingThings3D_release_TEST.list  GTC_TEST.list  LICENSE  MAPELoss.py  NEW_FlyingThings3D_release_TRAIN.list  README.md  benchmark.py  benchmark.sh  bilinear_sampler_pytorch.py  cluster1  cluster16  cluster32  cluster4  cluster8  compile.sh  conver-pfm2exr.sh  convert.py  data  dataset.py  detect-v2.sh  detect-v3.sh  detect.sh  (+63 more)
backups/: dataset.py  detect.sh  detecter_v3.py  run-v3.sh  run.sh
dataloader/: ETH3DLoader.py  EXRloader.py  KITTILoader.py  KITTILoader_imn.py  KITTILoader_in.py  KITTIloader2012.py  KITTIloader2015.py  MiddleburyLoader.py  RVCLoader.py  SIRSLoader.py  SceneFlowLoader.py  SintelLoader.py  StereoLoader.py  commons.py
demo/: binocular_player.py  show_rectify.py
exp_configs/: aanet-sf-test.conf  aanet.conf  crl.conf  dispanglenet.conf  dispnetc.conf  dispnetc_ft_sintel.conf  dispnetcres-reg.conf  dispnetcres-weight.conf  dispnetcres.conf  dispnetcs.conf  dispnetcss-reg.conf  dispnetcss.conf  dispnormnet.conf  dispnormnet_ft_sintel.conf  dnfusionnet.conf  dnfusionnet_ft_sintel.conf  dnirrnet.conf  dtonfusionnet.conf  dtonfusionnet_ft_sintel.conf  dtonfusionnet_test.conf  dtonnet.conf  dtonnet_ft_sintel.conf  dtonnet_sintel.conf  fadnet-ft-eth3d.conf  fadnet-ft-kitti.conf  fadnet-ft-largedisp.conf  fadnet-ft-md-r1.conf  fadnet-ft-md.conf  fadnet-ft-mdq.conf  fadnet-ft-rvc-mdq.conf  fadnet-ft-rvc.conf  fadnet-ft3d-irs.conf  fadnet-irs.conf  fadnet-kitti.conf  fadnet-md-test.conf  fadnet-sf-test.conf  fadnet.conf  ganet-irs.conf  ganet-sf-test.conf  ganet.conf  (+10 more)
layers_package/: .layers.py.swp  install.sh  layers.py  submodules.py
lists/: CLEAN_FlyingThings3D_release_TEST.list  DrivingStereo_val.list  FlyingThings3D_pm_release_TEST.list  FlyingThings3D_release_TEST.list  FlyingThings3D_release_TEST_norm.list  FlyingThings3D_release_TRAIN_100.list  FlyingThings3D_sgm_release_TEST.list  GTC_TEST.list  Home_TEST.list  Home_TRAIN.list  IRSDataset_TEST.list  IRSDataset_TEST_Home_Restaurant_Store.list  IRS_dark_test.list  IRS_glass_mirror_test.list  IRS_len_flare_test.list  IRS_metal_test.list  IRS_over_exposure_test.list  KITTI_TEST.list  KITTI_TRAIN.list  MB2014_TRAIN.list  NEW_FlyingThings3D_release_TEST.list  Office_TEST.list  RB_FlyingThings3D_release_TEST.list  Restaurant_TEST.list  Restaurant_TRAIN.list  SIRSDataset_test.list  SIRSDataset_train_error.list  SIRS_dark_test.list  SIRS_glass_mirror_test.list  SIRS_glass_test.list  SIRS_len_flare_test.list  SIRS_metal_test.list  SIRS_mirror_test.list  SIRS_over_exposure_test.list  Sintel_ALL.list  Sintel_TRAIN.list  Sintel_normal_all.list  Sintel_normal_test.list  Sintel_normal_train.list  Store_TEST.list  (+88 more)
logs/: dispnetcres.log.bk  girl-ir-train-dispCSRes.log.bk
loss_configs/: aanet_sceneflow.json  dispnetc_flying.json  dispnetcres_flying.json  dispnetcres_flying_1.json  dispnetcres_flying_test.json  dispnetcres_kitti.json  dispnetcres_sintel.json  dtonnet_ft_sintel.json  fadnet_kitti.json  fadnet_kitti_r1.json  fadnet_sceneflow.json  kitti-1r.json  kitti-3r.json  kitti.json  kitti.json.old  mobilefadnet_sceneflow.json  normnets_flying.json  psmnet_sceneflow.json  slightfadnet_sceneflow_long.json  test.json  weight_r1.json  weight_r2.json  weight_r3.json
losses/: balanceloss.py  bilinear_sampler_pytorch.py  monodepthloss.py  multiscaleloss.py  normalloss.py
networks/: .MobileDispNetC.py.swo  .MobileFADNet3.py.swo  .nfs0000000f01c31a2f00000001  .submodules.py.swo  AngleNetDF.py  DNFusionNet.py  DNIRRNet.py  DToNFusionNet.py  DToNNet.py  DepthNet.py  DispAngleNet.py  DispNetC.py  DispNetCS.py  DispNetCSRes.py  DispNetCSS.py  DispNetRes.py  DispNetS.py  DispNormNet.py  DispNormNet2.py  FADNet.py  GANet_deep.py  MobileDispNetC.py  MobileDispNetC2.py  MobileDispNetC3.py  aanet.py  (+27 more)
tools/DisparityTo3D_SingleFrame/: CMakeLists.txt  main.cpp  run.sh  scale.py  visual.py
tools/lmbspecialops/: CMakeLists.txt  README.md
tools/lmbspecialops/cmake/: cuda_gencode_options.cmake
tools/lmbspecialops/doc/: CMakeLists.txt  generate_doc.py  lmbspecialops_doc.md
tools/lmbspecialops/patches/: lz4_CMakeLists.txt
tools/lmbspecialops/python/: lmbspecialops.py
tools/lmbspecialops/src/: CMakeLists.txt  config.h.in  correlation.cc  correlation_1d.cc  correlation_1d_cuda.cu  correlation_cuda.cu  cuda_helper.h  decode_flo_op.cc  decode_lz4_op.cc  decode_lz4_raw_op.cc  decode_pfm_op.cc  decode_ppm_op.cc  decode_webp_op.cc  depthtoflow.cc  depthtoflow_cuda.cu  depthtonormals.cc  depthtonormals_cuda.cu  encode_flo_op.cc  encode_lz4_op.cc  encode_lz4_raw_op.cc  encode_pfm_op.cc  encode_webp_op.cc  flow_out_of_frame.cc  flowtodepth.cc  flowtodepth2.cc  flowwarp.cc  flowwarp_cuda.cu  helper.h  leakyrelu.cc  leakyrelu_cuda.cu  median3x3downsample.cc  median3x3downsample_cuda.cu  replacenonfinite.cc  replacenonfinite_cuda.cu  resample.cc  resample_cuda.cu  rotation_format.cu  rotation_format.h  scaleinvariantgradient.cc  scaleinvariantgradient_cuda.cu  (+2 more)
tools/lmbspecialops/test/: CMakeLists.txt  helper.py  test_FloOp.py  test_FlowToDepth2.py  test_LeakyRelu.py  test_Lz4.py  test_Lz4Raw.py  test_Median3x3Downsample.py  test_PfmOp.py  test_PpmOp.py  test_ReplaceNonfinite.py  test_ScaleInvariantGradient.py  test_WebpOp.py
(+361 files in other folders)
